updated my contacts and my hobbies link

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     <li>Probability, Statistics and Stochastic Processes</li>
     <li>Software Engineering</li>
   </ul>
-  <a href="D:\Web development\HTML - Personal site\My hobbies.html">
+  <a href="My hobbies.html">
     <h3><strong>My hobbies</strong></h3>
   </a>
-  <a href="D:\Web development\HTML - Personal site\My Contact.html">
+  <a href="My Contact.html">
     <h3><strong>My Contact</strong></h3>
   </a>
   <hr>
